fix redis cache: change toList() to collector(Collectors.toList()) (#38)
Co-authored-by: Danil Skryl <restillbiz@gmail.com>