@@ -2,6 +2,7 @@ package ru.musify.musicservice.service.impl;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
@@ -32,7 +33,7 @@ public class SongServiceImpl implements SongService {
   private final SongMapper songMapper;
 
   @Override
-//  @Cacheable(value = "song", key = "#id", condition = "#result != null")
+  @Cacheable(value = "song", key = "#id", condition = "#result != null")
   public SongDto findById(UUID id) {
     Song song = repository.findById(id)
         .orElseThrow(() -> {
@@ -55,7 +56,7 @@ public class SongServiceImpl implements SongService {
   }
 
   @Override
-//  @Cacheable(value = "songsCache")
+  @Cacheable(value = "songsCache")
   public List<SongDto> findPaginatedSongs(int page, int size) {
     Pageable pageable = PageRequest.of(page, size);
     Page<Song> paginatedSongs = repository.findAll(pageable);
@@ -63,7 +64,7 @@ public class SongServiceImpl implements SongService {
 
     return paginatedSongs.get()
         .map(songMapper::toDto)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Override
@@ -77,7 +78,7 @@ public class SongServiceImpl implements SongService {
 
   @Override
   @Transactional
-//  @CachePut(value = "song", key = "#song.id")
+  @CachePut(value = "song", key = "#song.id")
   public SongDto update(Song song) {
     Song updatedSong = repository.save(song);
     log.info("Song updated with id {}", updatedSong.getId());
@@ -87,7 +88,7 @@ public class SongServiceImpl implements SongService {
 
   @Override
   @Transactional
-//  @CacheEvict(value = "song", key = "#id")
+  @CacheEvict(value = "song", key = "#id")
   public void removeById(UUID id) {
     repository.deleteById(id);
 
